--- a/index.html
+++ b/index.html
@@ -1,64 +1,121 @@
 <!DOCTYPE html>
-<html lang="ar">
+<html lang="ar" dir="rtl">
 <head>
-<meta charset="UTF-8">
-<title>مولّد الفواتير</title>
-<style>
-  body { font-family: Arial; display: flex; background: #f5f6fa; }
-  .form-section, .preview-section { width: 50%; padding: 20px; }
-  .form-section { background: #fff; border-radius: 10px; margin: 15px; }
-  .preview-section { background: #f9f9f9; border-radius: 10px; margin: 15px;}
-  input, textarea { width: 100%; margin: 10px 0; padding: 8px; }
-  .invoice { background: #fff; padding: 20px; border-radius: 10px; }
-</style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>CodeQuick - توليد الباركود</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      max-width: 400px;
+      margin: 20px auto;
+      background-color: #f5f5f7;
+      color: #333;
+      text-align: center;
+    }
+    h1 {
+      color: #4a5568;
+    }
+    textarea {
+      width: 100%;
+      height: 80px;
+      margin-top: 8px;
+      font-size: 16px;
+      padding: 8px;
+      resize: vertical;
+    }
+    select, button {
+      width: 100%;
+      padding: 10px;
+      margin-top: 12px;
+      font-size: 16px;
+      cursor: pointer;
+    }
+    #qrcode {
+      margin: 20px auto;
+      background:#fff;
+      padding: 15px;
+      display: inline-block;
+    }
+    .download-btn {
+      background-color: #2b6cb0;
+      border: none;
+      color: white;
+      margin-top: 12px;
+      border-radius: 6px;
+      font-weight: bold;
+    }
+    .download-btn:hover {
+      background-color: #2c5282;
+    }
+  </style>
 </head>
 <body>
-  <div class="form-section">
-    <h3>معلومات الشركة</h3>
-    <input id="companyName" type="text" placeholder="اسم الشركة" oninput="updatePreview()">
-    <input id="companyAddress" type="text" placeholder="عنوان الشركة" oninput="updatePreview()">
-    <input id="companyEmail" type="email" placeholder="الإيميل" oninput="updatePreview()">
-    <input id="companyPhone" type="text" placeholder="الهاتف" oninput="updatePreview()">
-    <hr>
-    <h3>معلومات العميل</h3>
-    <input id="clientName" type="text" placeholder="اسم العميل" oninput="updatePreview()">
-    <input id="clientAddress" type="text" placeholder="عنوان العميل" oninput="updatePreview()">
-    <hr>
-    <h3>تفاصيل الفاتورة</h3>
-    <input id="desc" type="text" placeholder="وصف البند" oninput="updatePreview()">
-    <input id="qty" type="number" placeholder="الكمية" value="1" oninput="updatePreview()">
-    <input id="price" type="number" placeholder="السعر" value="0" oninput="updatePreview()">
-  </div>
-  <div class="preview-section">
-    <div class="invoice" id="invoicePreview">
-      <!-- ستظهر هنا معاينة الفاتورة تلقائياً -->
-    </div>
-  </div>
-<script>
-  function updatePreview() {
-    const companyName = document.getElementById('companyName').value;
-    const companyAddress = document.getElementById('companyAddress').value;
-    const companyEmail = document.getElementById('companyEmail').value;
-    const companyPhone = document.getElementById('companyPhone').value;
-    const clientName = document.getElementById('clientName').value;
-    const clientAddress = document.getElementById('clientAddress').value;
-    const desc = document.getElementById('desc').value;
-    const qty = +document.getElementById('qty').value || 1;
-    const price = +document.getElementById('price').value || 0;
-    const total = qty * price;
 
-    document.getElementById('invoicePreview').innerHTML = `
-      <h2>فاتورة</h2>
-      <p><b>من:</b> ${companyName}<br>${companyAddress}<br>${companyEmail} | ${companyPhone}</p>
-      <p><b>إلى:</b> ${clientName}<br>${clientAddress}</p>
-      <table width="100%" border="1" style="border-collapse:collapse; margin:10px 0;">
-        <tr><th>الوصف</th><th>الكمية</th><th>السعر</th><th>المجموع</th></tr>
-        <tr><td>${desc}</td><td>${qty}</td><td>${price}</td><td>${total}</td></tr>
-      </table>
-      <h3>الإجمالي: ${total} ريال</h3>
-    `;
-  }
-  updatePreview(); // للمعاينة الأولية
-</script>
+  <h1>CodeQuick</h1>
+  <p>Instantly generate, customize, and download barcodes.</p>
+
+  <label for="data">Barcode Details</label>
+  <textarea id="data" placeholder="اكتب هنا بياناتك أو رابط"></textarea>
+
+  <label for="type">Barcode Type</label>
+  <select id="type" disabled>
+    <option value="qrcode" selected>QR Code</option>
+    <!-- يمكن إضافة أنواع أخرى مستقبلا -->
+  </select>
+
+  <button id="generate">Generate Barcode</button>
+
+  <div id="preview">
+    <h3>Preview</h3>
+    <div id="qrcode">Barcode will be displayed here</div>
+  </div>
+
+  <button id="download" class="download-btn" style="display:none;">Download PNG</button>
+
+  <script src="https://cdn.rawgit.com/davidshimjs/qrcodejs/gh-pages/qrcode.min.js"></script>
+  <script>
+    const generateBtn = document.getElementById('generate');
+    const qrcodeContainer = document.getElementById('qrcode');
+    const dataInput = document.getElementById('data');
+    const downloadBtn = document.getElementById('download');
+    let qr;
+
+    generateBtn.addEventListener('click', () => {
+      const data = dataInput.value.trim();
+      if (!data) {
+        alert('يرجى إدخال بيانات لإنشاء الباركود');
+        return;
+      }
+      // إزالة الباركود القديم
+      qrcodeContainer.innerHTML = '';
+      // توليد QR Code جديد
+      qr = new QRCode(qrcodeContainer, {
+        text: data,
+        width: 200,
+        height: 200,
+        colorDark : "#000000",
+        colorLight : "#ffffff",
+      });
+      downloadBtn.style.display = 'inline-block';
+    });
+
+    downloadBtn.addEventListener('click', () => {
+      if (!qr) return;
+      // الحصول على الكانفس من QRCode
+      let canvas = qrcodeContainer.querySelector('canvas');
+      if (!canvas) return alert('الباركود لم يتم توليده بعد');
+      // تحويل الكانفس إلى رابط تحميل
+      let image = canvas.toDataURL("image/png").replace("image/png", "image/octet-stream");
+      // إنشاء رابط مؤقت وتحميل الصورة
+      let link = document.createElement('a');
+      link.href = image;
+      link.download = 'barcode.png';
+      document.body.appendChild(link);
+      link.click();
+      document.body.removeChild(link);
+    });
+  </script>
+
 </body>
 </html>
